--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -23,13 +23,17 @@ body {
 }
 
 .nav-container {
-  min-width: 40rem;
+  min-width: rem;
   max-width: 80%;
   display: flex;
   margin: 0 auto;
   height: 10rem;
   justify-content: space-between;
   align-content: center;
+
+  @media (max-width: 500px) {
+    flex-direction: column;
+  }
 }
 
 h1 {
@@ -76,9 +80,20 @@ a.router-link-exact-active {
 
 .search-area {
   display: flex;
-  padding: 10rem;
+  padding: 5rem;
   align-content: center;
   justify-content: center;
+
+  form {
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+  }
+
+  @media (max-width: 400px) {
+    padding: 2rem;
+  }
 }
 
 .search-field,
@@ -104,6 +119,14 @@ a.router-link-exact-active {
   width: 30rem;
   border-right: none;
   border-color: #2e191e;
+
+  @media (max-width: 500px) {
+    width: 25rem;
+  }
+
+  @media (max-width: 400px) {
+    width: 20rem;
+  }
 }
 
 .search-btn {
@@ -116,19 +139,3 @@ a.router-link-exact-active {
     color: #ccc;
   }
 }
-
-/*
-  width: 30rem;
-  height: 4rem;
-  font-size: 1.6rem;
-  padding: 1rem 2rem;
-  border: none;
-}
-
-.search-btn {
-  height: 4rem;
-  width: 4rem;
-  border: none;
-}
-
-*/
