--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
+@import './variables';
+@import './navbar';
+@import './seach-form';
+
 * {
   padding: 0;
   margin: 0;
@@ -17,125 +21,37 @@ body {
   line-height: 1.7;
 }
 
-.nav {
-  display: block;
-  background-color: #2e191e;
-}
-
-.nav-container {
-  min-width: rem;
-  max-width: 80%;
-  display: flex;
-  margin: 0 auto;
-  height: 10rem;
-  justify-content: space-between;
-  align-content: center;
-
-  @media (max-width: 500px) {
-    flex-direction: column;
-  }
-}
-
-h1 {
-  color: #f3f3f3;
-  font-size: 3rem;
-  text-transform: uppercase;
-}
-
-.nav-left {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-
-.nav-right {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-
-  a {
-    text-transform: uppercase;
-    display: inline-block;
-    color: #f3f3f3;
-    text-decoration: none;
-    font-size: 1.4rem;
-    margin: 1rem;
-    border-bottom: 2px transparent solid;
-    transition: all 0.5s;
-    &:hover {
-      border-bottom: 2px #ccc solid;
-      color: #ccc;
-    }
-  }
-}
-
-a.router-link-exact-active {
-  border-bottom: 2px #f3f3f3 solid;
-}
-
 .main {
-  height: calc(100vh - 10rem);
-  background-color: #856262;
+  min-height: calc(100vh - 10rem);
+  background-color: $background-color;
 }
 
-.search-area {
-  display: flex;
-  padding: 5rem;
-  align-content: center;
-  justify-content: center;
 
-  form {
-    width: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-  }
-
-  @media (max-width: 400px) {
-    padding: 2rem;
-  }
+.search-results {
+  color: white;
+  font-size: 1.8rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 3rem;
 }
 
-.search-field,
-.search-btn {
-  border: 1px solid #dedede;
-  font-size: 1.4rem;
-  padding: 0.8rem 1.4rem;
-  margin: 0;
-  outline: none;
+.result-container {
+  min-width: 30rem;
+  max-width: 60%;
+  margin: 0 auto;
 }
 
-.search-field {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.search-btn {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.search-field {
-  width: 30rem;
-  border-right: none;
-  border-color: #2e191e;
-
-  @media (max-width: 500px) {
-    width: 25rem;
-  }
-
-  @media (max-width: 400px) {
-    width: 20rem;
-  }
-}
-
-.search-btn {
+.meal {
   cursor: pointer;
-  background-color: #2e191e;
-  border-color: #2e191e;
-  color: #f3f3f3;
+  transition: all 0.2s ease;
+  max-width: 30rem;
+
 
   &:hover {
-    color: #ccc;
+    transform: scale(1.1);
+  }
+
+  img {
+    width: 100%;
   }
 }
