--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -48,10 +48,16 @@ body {
 
 
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 
   img {
     width: 100%;
+  }
+
+  h3 {
+    text-align: center;
+    font-weight: 400;
+    font-size: inherit;
   }
 }
