Add search result string to page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,6 +26,14 @@ body {
   background-color: $background-color;
 }
 
+.search-string {
+  font-size: 1.7rem;
+  color: white;
+  font-weight: 400;
+  text-align: center;
+  padding-bottom: 4rem;
+}
+
 
 .search-results {
   color: white;
