--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -16,7 +16,7 @@ body {
 }
 
 .main {
-  min-height: calc(100vh - 10rem);
+  min-height: calc(100vh - 10rem - 10rem);
   background-color: $background-color;
 }
 
