--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -25,7 +25,7 @@
     font-size: 1.4rem;
     margin: 1rem;
     border-bottom: 2px transparent solid;
-    transition: all 0.5s;
+    transition: all 0.5s ease;
     &:hover {
       border-bottom: 2px $light-gray-2 solid;
       color: #ccc;
