--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,19 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  box-sizing: border-box;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-}
 
 .main {
   min-height: calc(100vh - 10rem - 10rem);
@@ -24,6 +8,17 @@ body {
   cursor: pointer;
   transition: all 0.2s ease;
   max-width: 30rem;
+  position: relative;
+
+  &-title {
+    background-color: #2e191e;
+    padding: 10px; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0.9;
+  }
 
 
   &:hover {
@@ -32,11 +27,5 @@ body {
 
   img {
     width: 100%;
-  }
-
-  h3 {
-    text-align: center;
-    font-weight: 400;
-    font-size: inherit;
   }
 }
