--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
 @import './variables';
+@import './base';
 @import './main';
 @import './search-results'; 
 @import './navbar';
 @import './seach-form';
 @import './meal';
+@import './categories';
 @import './footer';
